grammar/CMMParser.py
# Generated from CMM.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CMMParser ( Parser ):

    grammarFileName = "CMM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'if'", "'else'", "'while'", "'return'", "'read'", 
                     "'write'", "'writeln'", "'break'", "'int'", "'char'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
                     "';'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ID", "NUM", "WS", "IF", "ELSE", "WHILE", 
                      "RETURN", "READ", "WRITE", "WRITELN", "BREAK", "INT", 
                      "CHAR", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "EQUALS", 
                      "EQUALS_EQUALS", "NOT_EQUALS", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "AND", "OR", 
                      "NOT", "SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACKET", "RBRACKET" ]

    RULE_program = 0
    RULE_varDeclList = 1
    RULE_varDecl = 2
    RULE_funDeclList = 3
    RULE_funDecl = 4
    RULE_paramDeclList = 5
    RULE_paramDecl = 6
    RULE_block = 7
    RULE_type = 8
    RULE_stmtList = 9
    RULE_stmt = 10
    RULE_expr = 11
    RULE_primary = 12
    RULE_exprList = 13
    RULE_unaryOp = 14
    RULE_binOp = 15

    ruleNames =  [ "program", "varDeclList", "varDecl", "funDeclList", "funDecl", 
                   "paramDeclList", "paramDecl", "block", "type", "stmtList", 
                   "stmt", "expr", "primary", "exprList", "unaryOp", "binOp" ]

    EOF = Token.EOF
    ID=1
    NUM=2
    WS=3
    IF=4
    ELSE=5
    WHILE=6
    RETURN=7
    READ=8
    WRITE=9
    WRITELN=10
    BREAK=11
    INT=12
    CHAR=13
    PLUS=14
    MINUS=15
    MULTIPLY=16
    DIVIDE=17
    EQUALS=18
    EQUALS_EQUALS=19
    NOT_EQUALS=20
    LESS_THAN=21
    LESS_THAN_OR_EQUAL=22
    GREATER_THAN=23
    GREATER_THAN_OR_EQUAL=24
    AND=25
    OR=26
    NOT=27
    SEMI=28
    COMMA=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    RBRACE=33
    LBRACKET=34
    RBRACKET=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclList(self):
            return self.getTypedRuleContext(CMMParser.VarDeclListContext,0)


        def funDeclList(self):
            return self.getTypedRuleContext(CMMParser.FunDeclListContext,0)


        def getRuleIndex(self):
            return CMMParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CMMParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.varDeclList()
            self.state = 33
            self.funDeclList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(CMMParser.VarDeclContext,i)


        def getRuleIndex(self):
            return CMMParser.RULE_varDeclList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclList" ):
                listener.enterVarDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclList" ):
                listener.exitVarDeclList(self)




    def varDeclList(self):

        localctx = CMMParser.VarDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDeclList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 35
                    self.varDecl() 
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CMMParser.TypeContext,0)


        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def SEMI(self):
            return self.getToken(CMMParser.SEMI, 0)

        def LBRACKET(self):
            return self.getToken(CMMParser.LBRACKET, 0)

        def NUM(self):
            return self.getToken(CMMParser.NUM, 0)

        def RBRACKET(self):
            return self.getToken(CMMParser.RBRACKET, 0)

        def getRuleIndex(self):
            return CMMParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = CMMParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.type_()
            self.state = 42
            self.match(CMMParser.ID)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 43
                self.match(CMMParser.LBRACKET)
                self.state = 44
                self.match(CMMParser.NUM)
                self.state = 45
                self.match(CMMParser.RBRACKET)


            self.state = 48
            self.match(CMMParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.FunDeclContext)
            else:
                return self.getTypedRuleContext(CMMParser.FunDeclContext,i)


        def getRuleIndex(self):
            return CMMParser.RULE_funDeclList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDeclList" ):
                listener.enterFunDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDeclList" ):
                listener.exitFunDeclList(self)




    def funDeclList(self):

        localctx = CMMParser.FunDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funDeclList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==13:
                self.state = 50
                self.funDecl()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CMMParser.TypeContext,0)


        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CMMParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CMMParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CMMParser.BlockContext,0)


        def paramDeclList(self):
            return self.getTypedRuleContext(CMMParser.ParamDeclListContext,0)


        def getRuleIndex(self):
            return CMMParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)




    def funDecl(self):

        localctx = CMMParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.type_()
            self.state = 57
            self.match(CMMParser.ID)
            self.state = 58
            self.match(CMMParser.LPAREN)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==13:
                self.state = 59
                self.paramDeclList()


            self.state = 62
            self.match(CMMParser.RPAREN)
            self.state = 63
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.ParamDeclContext)
            else:
                return self.getTypedRuleContext(CMMParser.ParamDeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CMMParser.COMMA)
            else:
                return self.getToken(CMMParser.COMMA, i)

        def getRuleIndex(self):
            return CMMParser.RULE_paramDeclList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDeclList" ):
                listener.enterParamDeclList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDeclList" ):
                listener.exitParamDeclList(self)




    def paramDeclList(self):

        localctx = CMMParser.ParamDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramDeclList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.paramDecl()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 66
                self.match(CMMParser.COMMA)
                self.state = 67
                self.paramDecl()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CMMParser.TypeContext,0)


        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def getRuleIndex(self):
            return CMMParser.RULE_paramDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamDecl" ):
                listener.enterParamDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamDecl" ):
                listener.exitParamDecl(self)




    def paramDecl(self):

        localctx = CMMParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.type_()
            self.state = 74
            self.match(CMMParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CMMParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CMMParser.RBRACE, 0)

        def varDeclList(self):
            return self.getTypedRuleContext(CMMParser.VarDeclListContext,0)


        def stmtList(self):
            return self.getTypedRuleContext(CMMParser.StmtListContext,0)


        def getRuleIndex(self):
            return CMMParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = CMMParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(CMMParser.LBRACE)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 77
                self.varDeclList()


            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 5771399126) != 0):
                self.state = 80
                self.stmtList()


            self.state = 83
            self.match(CMMParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CMMParser.INT, 0)

        def CHAR(self):
            return self.getToken(CMMParser.CHAR, 0)

        def getRuleIndex(self):
            return CMMParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = CMMParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.StmtContext)
            else:
                return self.getTypedRuleContext(CMMParser.StmtContext,i)


        def getRuleIndex(self):
            return CMMParser.RULE_stmtList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtList" ):
                listener.enterStmtList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtList" ):
                listener.exitStmtList(self)




    def stmtList(self):

        localctx = CMMParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.stmt()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 5771399126) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(CMMParser.SEMI, 0)

        def expr(self):
            return self.getTypedRuleContext(CMMParser.ExprContext,0)


        def RETURN(self):
            return self.getToken(CMMParser.RETURN, 0)

        def READ(self):
            return self.getToken(CMMParser.READ, 0)

        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def WRITE(self):
            return self.getToken(CMMParser.WRITE, 0)

        def WRITELN(self):
            return self.getToken(CMMParser.WRITELN, 0)

        def BREAK(self):
            return self.getToken(CMMParser.BREAK, 0)

        def IF(self):
            return self.getToken(CMMParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CMMParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CMMParser.RPAREN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.StmtContext)
            else:
                return self.getTypedRuleContext(CMMParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(CMMParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(CMMParser.WHILE, 0)

        def block(self):
            return self.getTypedRuleContext(CMMParser.BlockContext,0)


        def getRuleIndex(self):
            return CMMParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = CMMParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(CMMParser.SEMI)
                pass
            elif token in [1, 2, 15, 27, 30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(CMMParser.SEMI)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(CMMParser.RETURN)
                self.state = 97
                self.expr(0)
                self.state = 98
                self.match(CMMParser.SEMI)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(CMMParser.READ)
                self.state = 101
                self.match(CMMParser.ID)
                self.state = 102
                self.match(CMMParser.SEMI)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.match(CMMParser.WRITE)
                self.state = 104
                self.expr(0)
                self.state = 105
                self.match(CMMParser.SEMI)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(CMMParser.WRITELN)
                self.state = 108
                self.match(CMMParser.SEMI)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 7)
                self.state = 109
                self.match(CMMParser.BREAK)
                self.state = 110
                self.match(CMMParser.SEMI)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.match(CMMParser.IF)
                self.state = 112
                self.match(CMMParser.LPAREN)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(CMMParser.RPAREN)
                self.state = 115
                self.stmt()
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 116
                    self.match(CMMParser.ELSE)
                    self.state = 117
                    self.stmt()


                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.match(CMMParser.WHILE)
                self.state = 121
                self.match(CMMParser.LPAREN)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(CMMParser.RPAREN)
                self.state = 124
                self.stmt()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 10)
                self.state = 126
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(CMMParser.PrimaryContext,0)


        def unaryOp(self):
            return self.getTypedRuleContext(CMMParser.UnaryOpContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.ExprContext)
            else:
                return self.getTypedRuleContext(CMMParser.ExprContext,i)


        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def EQUALS(self):
            return self.getToken(CMMParser.EQUALS, 0)

        def LBRACKET(self):
            return self.getToken(CMMParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(CMMParser.RBRACKET, 0)

        def binOp(self):
            return self.getTypedRuleContext(CMMParser.BinOpContext,0)


        def getRuleIndex(self):
            return CMMParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CMMParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 130
                self.primary()
                pass

            elif la_ == 2:
                self.state = 131
                self.unaryOp()
                self.state = 132
                self.expr(4)
                pass

            elif la_ == 3:
                self.state = 134
                self.match(CMMParser.ID)
                self.state = 135
                self.match(CMMParser.EQUALS)
                self.state = 136
                self.expr(2)
                pass

            elif la_ == 4:
                self.state = 137
                self.match(CMMParser.ID)
                self.state = 138
                self.match(CMMParser.LBRACKET)
                self.state = 139
                self.expr(0)
                self.state = 140
                self.match(CMMParser.RBRACKET)
                self.state = 141
                self.match(CMMParser.EQUALS)
                self.state = 142
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CMMParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 146
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 147
                    self.binOp()
                    self.state = 148
                    self.expr(4) 
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CMMParser.ID, 0)

        def NUM(self):
            return self.getToken(CMMParser.NUM, 0)

        def LPAREN(self):
            return self.getToken(CMMParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(CMMParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(CMMParser.RPAREN, 0)

        def exprList(self):
            return self.getTypedRuleContext(CMMParser.ExprListContext,0)


        def LBRACKET(self):
            return self.getToken(CMMParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(CMMParser.RBRACKET, 0)

        def getRuleIndex(self):
            return CMMParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = CMMParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primary)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(CMMParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(CMMParser.NUM)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(CMMParser.LPAREN)
                self.state = 158
                self.expr(0)
                self.state = 159
                self.match(CMMParser.RPAREN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.match(CMMParser.ID)
                self.state = 162
                self.match(CMMParser.LPAREN)
                self.state = 163
                self.exprList()
                self.state = 164
                self.match(CMMParser.RPAREN)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.match(CMMParser.ID)
                self.state = 167
                self.match(CMMParser.LBRACKET)
                self.state = 168
                self.expr(0)
                self.state = 169
                self.match(CMMParser.RBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMMParser.ExprContext)
            else:
                return self.getTypedRuleContext(CMMParser.ExprContext,i)

